# TestAdapter_Catch2

./: .gitignore  LICENSE  README.md  VSTestAdapterCatch2.runsettings  VSTestAdapterCatch2.sln
Docs/: Build.md  CHANGELOG.md  Capabilities.md  Discovery.md  Known-issues.md  Naming-conventions.md  Readme.md  Runsettings.md  Settings.md  Troubleshooting.md  Walkthrough-vs2017.md  Walkthrough-vs2019.md  Walkthrough-vs2022.md  Walkthrough.md
Libraries/: Catch2.TestAdapter.nuspec
Libraries/Catch2Interface/: Catch2Interface.csproj  Constants.cs  Discoverer.cs  Executor.cs  Settings.cs  SettingsManager.cs  TestCase.cs  TestCaseGroup.cs  TestResult.cs  XmlOutput.cs
Libraries/Catch2TestAdapter/: Catch2TestAdapter.csproj  SettingsProvider.cs  SharedUtils.cs  TestDiscoverer.cs  TestDiscovererDll.cs  TestExecutor.cs  TestExecutorDll.cs
ReferenceTests/: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  ReferenceTests.runsettings  ReferenceTests.sln
ReferenceTests/Catch2/: catch.hpp
ReferenceTests/src/catch2/: CMakeLists.txt  catch.hpp
ReferenceTests/src/tests/: CMakeLists.txt
ReferenceTests/src/tests/CatchDllRunner/: main.cpp
ReferenceTests/src/tests/CatchDll_Common/: CMakeLists.txt  main.cpp
ReferenceTests/src/tests/Catch_Common/: CMakeLists.txt  main.cpp
ReferenceTests/src/tests/Catch_Discover/: CMakeLists.txt  UT_Tags.cpp  UT_TestCases.cpp
ReferenceTests/src/tests/Catch_Dummy/: CMakeLists.txt  UT_Dummy.cpp  main.cpp
ReferenceTests/src/tests/Catch_Duplicates/: CMakeLists.txt
ReferenceTests/src/tests/Catch_Environment/: CMakeLists.txt  UT_getenv.cpp
ReferenceTests/src/tests/Catch_Execution/: CMakeLists.txt  UT_Fail.cpp  UT_Mixed.cpp  UT_Names.cpp  UT_Pass.cpp
ReferenceTests/src/tests/Catch_Hidden/: CMakeLists.txt  UT_Hidden.cpp  UT_NotHidden.cpp
ReferenceTests/src/tests/Catch_NoSEH/: CMakeLists.txt
ReferenceTests/src/tests/Catch_Testset01/: CMakeLists.txt  UT_Tests01.cpp
ReferenceTests/src/tests/Catch_Testset02/: CMakeLists.txt  UT_Tests01.cpp  UT_Tests02.cpp  UT_Tests03.cpp  UT_Tests04.cpp  UT_Tests05.cpp  UT_Tests07.cpp
ReferenceTests/src/tests/Catch_Testset03/: CMakeLists.txt  UT_Tests03.cpp  UT_Tests04.cpp  UT_Tests09.cpp
ReferenceTests/tools/: buildtests-msvc142.bat  buildtests-msvc142_release.bat  buildtests-msvc143.bat  buildtests-msvc143_release.bat  buildtests.bat  buildtests_release.bat  prepare-msvc142.bat  prepare-msvc143.bat
ReferenceTests/walkthrough/: .runsettings  MinimalDll.runsettings  Readme.md  (+7 more)
ReferenceTests_v3/: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
ReferenceTests_v3/catch2/: CMakeLists.txt  CMakePresets.json
ReferenceTests_v3/catch2/cmake/: CMakePresets.json  tafc2-catch2builder-helpers.cmake
ReferenceTests_v3/src/catch2/: CMakeLists.txt  CMakePresets.json
ReferenceTests_v3/src/cmake/: tafc2-helpers.cmake
ReferenceTests_v3/src/cmake-package/v3.0.0/: Tafc2-Catch2_v3_0_0Config.cmake  Tafc2-Catch2_v3_0_0ConfigVersion.cmake  Tafc2-Catch2_v3_0_0Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.0.1/: Tafc2-Catch2_v3_0_1Config.cmake  Tafc2-Catch2_v3_0_1ConfigVersion.cmake  Tafc2-Catch2_v3_0_1Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.1.0/: Tafc2-Catch2_v3_1_0Config.cmake  Tafc2-Catch2_v3_1_0ConfigVersion.cmake  Tafc2-Catch2_v3_1_0Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.1.1/: Tafc2-Catch2_v3_1_1Config.cmake  Tafc2-Catch2_v3_1_1ConfigVersion.cmake  Tafc2-Catch2_v3_1_1Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.2.0/: Tafc2-Catch2_v3_2_0Config.cmake  Tafc2-Catch2_v3_2_0ConfigVersion.cmake  Tafc2-Catch2_v3_2_0Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.2.1/: Tafc2-Catch2_v3_2_1Config.cmake  Tafc2-Catch2_v3_2_1ConfigVersion.cmake  Tafc2-Catch2_v3_2_1Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.3.0/: Tafc2-Catch2_v3_3_0Config.cmake  Tafc2-Catch2_v3_3_0ConfigVersion.cmake  Tafc2-Catch2_v3_3_0Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.3.1/: Tafc2-Catch2_v3_3_1Config.cmake  Tafc2-Catch2_v3_3_1ConfigVersion.cmake  Tafc2-Catch2_v3_3_1Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.3.2/: Tafc2-Catch2_v3_3_2Config.cmake  Tafc2-Catch2_v3_3_2ConfigVersion.cmake  Tafc2-Catch2_v3_3_2Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.4.0/: Tafc2-Catch2_v3_4_0Config.cmake  Tafc2-Catch2_v3_4_0ConfigVersion.cmake  Tafc2-Catch2_v3_4_0Targets.cmake
ReferenceTests_v3/src/cmake-package/v3.5.0/: Tafc2-Catch2_v3_5_0Config.cmake  Tafc2-Catch2_v3_5_0ConfigVersion.cmake  Tafc2-Catch2_v3_5_0Targets.cmake
ReferenceTests_v3/src/cmake/config/: msvc142.config.cmake  msvc143.config.cmake
ReferenceTests_v3/src/tests/: CMakeLists.txt
ReferenceTests_v3/src/tests/CatchDllRunner/: CMakeLists.txt
ReferenceTests_v3/src/tests/CatchDll_Common/: CMakeLists.txt  main.cpp
ReferenceTests_v3/src/tests/Catch_Common/: CMakeLists.txt  catch_discover.hpp  main.cpp
ReferenceTests_v3/src/tests/Catch_Discover/: CMakeLists.txt  UT_LongTestCaseNames.cpp  UT_NotDefaultDiscoverable.cpp  UT_Tags.cpp  UT_TestCases.cpp
ReferenceTests_v3/src/tests/Catch_Dummy/: CMakeLists.txt  UT_Dummy.cpp
ReferenceTests_v3/src/tests/Catch_Duplicates/: CMakeLists.txt  UT_SameTestNames.cpp
ReferenceTests_v3/src/tests/Catch_Environment/: CMakeLists.txt  UT_getenv.cpp
ReferenceTests_v3/src/tests/Catch_Execution/: CMakeLists.txt  UT_Fail.cpp  UT_Mixed.cpp  UT_Names.cpp  UT_Pass.cpp
ReferenceTests_v3/src/tests/Catch_Hidden/: CMakeLists.txt  UT_Hidden.cpp  UT_NotHidden.cpp
ReferenceTests_v3/src/tests/Catch_NoSEH/: CMakeLists.txt  UT_Tests01.cpp
ReferenceTests_v3/src/tests/Catch_Testset01/: CMakeLists.txt  UT_Tests01.cpp
ReferenceTests_v3/src/tests/Catch_Testset02/: UT_Tests01.cpp  UT_Tests02.cpp  UT_Tests03.cpp  UT_Tests04.cpp  UT_Tests05.cpp  UT_Tests06.cpp  UT_Tests07.cpp
ReferenceTests_v3/src/tests/Catch_Testset03/: UT_Tests01.cpp  UT_Tests02.cpp  UT_Tests03.cpp  UT_Tests04.cpp  UT_Tests05.cpp  UT_Tests06.cpp  UT_Tests07.cpp  UT_Tests08.cpp  UT_Tests09.cpp
ReferenceTests_v3/tools/: buildtests-msvc143.bat  prepare-catch2-msvc143.bat  prepare-sln-msvc143.bat
(+242 files in other folders)
